<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OpenCvTest</string>
    <string name="action_settings">Settings</string>
    <string name="load">Load</string>
    <string name="imageDescription">test image</string>
    <string name="recognize_image">Recognize Face in Image</string>
    <string name="recognize_video">Recognize Face in Video</string>
    <string name="detect_video">Detect People in Video</string>
    <string name="train">Train Recognizer</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="user_image">User Image</string>
    <string name="close">Close</string>
    <string name="camera">Camera</string>
    <string name="name">Name</string>
    <string name="done">Done</string>
    <string name="back">Back</string>
	<string name="eigen">Eigenface</string>
	<string name="fisher">Fisherface</string>
	<string name="lbph">Local Binary Pattern Histogram</string>
    <string name="human_detection">Human Detection</string>
    <string name="face_recognition">Face Recognition</string>
    <string name="swap_camera">Swap Camera</string>
    <string name="test">Test</string>
    <string name="wipe">Wipe Training Data</string>
    <string name="save_video">Save Video</string>
    <string name="record_video">Record Video</string>
    <string name="upload_video">Upload Video</string>
    <string name="playback_video">Playback Video</string>
    <string name="playVideo">Play Video</string>
    
</resources>
