<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <EditText
        android:id="@+id/name"
        android:hint="@string/name"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="text"
        />
    
    <ImageView
        android:id="@+id/imgDisplay"
        android:contentDescription="@string/user_image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />
    
    <Button 
        android:id="@+id/camera"
        android:text="@string/camera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="camera"
        />
    
    <Button 
        android:id="@+id/done"
        android:text="@string/done"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="done"
        />
    
</LinearLayout>
