<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    
    <Button android:id="@+id/back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/back"
        android:onClick="back"
        />
	    
    <Button android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toRightOf="@id/back"
        android:layout_alignParentTop="true"
        android:text="@string/add"
        android:onClick="add"
        />
    
    <Button android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/add"
        android:text="@string/delete"
        android:onClick="delete"
        />
    
	<GridView android:id="@+id/grid_view"
	    android:layout_width="fill_parent"
	    android:layout_height="fill_parent"
	    android:layout_alignParentBottom="true"
	    android:layout_below="@id/back"
	    android:numColumns="auto_fit"
	    android:gravity="center"
	    android:stretchMode="columnWidth"
	    android:background="#000000">
	</GridView>
	
</RelativeLayout>
